<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/activity_new_account"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/margin_vertical_list_item"
    android:layout_marginEnd="@dimen/margin_horizontal_list_item"
    android:layout_marginStart="@dimen/margin_horizontal_list_item"
    android:layout_marginTop="@dimen/margin_vertical_list_item"
    tools:context="k3.daybook.account.CreateAccountActivity">

    <TextView
        android:id="@+id/tv_create_name"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/height_edit_text"
        android:gravity="center"
        android:text="@string/create_account_name"/>

    <EditText
        android:id="@+id/create_account_name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_edit_text"
        android:layout_toEndOf="@+id/tv_create_name"
        android:hint="@string/create_account_name_hint"/>

    <TextView
        android:id="@+id/tv_create_balance"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/height_edit_text"
        android:layout_below="@+id/tv_create_name"
        android:gravity="center"
        android:text="@string/create_account_balance"/>

    <EditText
        android:id="@+id/create_account_balance"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_edit_text"
        android:layout_below="@+id/create_account_name"
        android:layout_toEndOf="@+id/tv_create_balance"
        android:hint="@string/create_account_balance_hint"
        android:inputType="numberDecimal"/>

    <TextView
        android:id="@+id/tv_create_type"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/height_edit_text"
        android:layout_below="@+id/tv_create_balance"
        android:gravity="center"
        android:text="@string/create_account_type"/>

    <Spinner
        android:id="@+id/create_account_type"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/height_edit_text"
        android:layout_below="@+id/create_account_balance"
        android:layout_toEndOf="@+id/tv_create_type"/>

    <TextView
        android:id="@+id/tv_create_expire"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/height_edit_text"
        android:layout_below="@+id/tv_create_type"
        android:gravity="center"
        android:text="@string/create_account_expire"/>

    <EditText
        android:id="@+id/create_account_expire"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_edit_text"
        android:layout_below="@+id/create_account_type"
        android:layout_toEndOf="@+id/tv_create_expire"
        android:hint="@string/create_account_expire_hint"
        android:inputType="date"/>

    <TextView
        android:id="@+id/tv_create_holder"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/height_edit_text"
        android:layout_below="@+id/tv_create_expire"
        android:gravity="center"
        android:text="@string/create_account_holder"/>

    <EditText
        android:id="@+id/create_account_holder"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_edit_text"
        android:layout_below="@+id/create_account_expire"
        android:layout_toEndOf="@+id/tv_create_holder"
        android:hint="@string/create_account_holder_hint"
        android:inputType="textPersonName"/>

    <TextView
        android:id="@+id/tv_create_limit"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/height_edit_text"
        android:layout_below="@+id/tv_create_holder"
        android:gravity="center"
        android:text="@string/create_account_limit"/>

    <EditText
        android:id="@+id/create_account_limit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_edit_text"
        android:layout_below="@+id/create_account_holder"
        android:layout_toEndOf="@+id/tv_create_limit"
        android:hint="@string/create_account_limit_hint"
        android:inputType="numberDecimal"/>

    <Button
        android:id="@+id/btn_create_account_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/common_submit"/>

</RelativeLayout>
