<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/activity_account"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="k3.daybook.record.RecordingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_account_text"
        android:orientation="horizontal">

        <Switch
            android:id="@+id/inOrOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:showText="true"
            android:textOff="@string/recording_payout"
            android:textOn="@string/recording_income"/>

        <EditText
            android:id="@+id/amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/recording_amount_hint"
            android:inputType="numberDecimal"
            android:paddingStart="@dimen/padding_horizontal_amount_text"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/consume"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <Spinner
            android:id="@+id/pay_method"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

    </LinearLayout>

    <EditText
        android:id="@+id/comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/recording_comment_hint"
        android:imeOptions="actionDone"
        android:maxLines="1"
        android:singleLine="true"/>

    <Button
        android:id="@+id/confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/common_submit"/>

</LinearLayout>
